Fix instant death, chaos engine, death lobby flow; add coins/shop
Prevent spawn deaths with grace period, safe teleports, and death-height
clamping. Make chaos events reliably start on interval with concurrent
support and fireball meteors. On death, delay then fully eject players
to the main lobby. Add SQLite coins, shop GUI, protected lobby items,
world build protection, language command, and configurable chest loot.

Co-authored-by: vladgaming166-prog <vladgaming166-prog@users.noreply.github.com>